# Agent-Workflow

./: .gitignore  LICENSE  README.md  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  diagnosis_report.json  first.bat  first.py  first.sh  init_program.py  main.py  models.json  package-lock.json  pyproject.toml  sandbox_temp.py  start.bat  start.py  start.sh
agent-frontend/: index.html  package-lock.json  package.json
backend/: Agent.py  Graph.py  agent.py  agents.py  api.py  config_manager.py  graph.py  main.py  pyproject.toml  run.py  server.py  state.py  tools.py
backend/tools/: __init__.py  analyze_tools.py  code_tools.py  file_tools.py  run.py  utils.py  web_tools.py
backend/workdlow/: test.json
backend/workflow/: test.json  test2.json
chats/: coder_helper_Xaq_memory.json  content_studio_果粒科技_memory.json  debate_team_加油站事件识别_memory.json  simple_agent_default_memory.json  simple_agent_你好_memory.json  simple_agent_笔试_memory.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend-old/: app.js  index.html
nodes/: Task_Planner.json  coder.json  multi_port_joiner.json  multi_port_splitter.json  py_net_test.json  py_sandbox.json  searcher.json  summarizer.json
sessions/: default.json  general_multi_agent.json_session_1776147556527.json  new_workflow.json_session_1776140942529.json  session_1776073639262.json
workflows/: agent2.json  coder_helper.json  content_studio.json  debate_team.json  deepchat.json  general_multi_agent.json  model_discussion_group.json  multi_port_demo.json  multi_solutions.json  (+6 more)
(+34 files in other folders)
