[project]
name = "agent-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "bs4>=0.0.2",
    "ddgs>=9.12.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
